2000-11-27  Dancer Vesperman <dancer@users.sourceforge.net>
	* Create newstrdup() in gumps.cc as an interim solution. Goal is to encapsulate all char arrays into an efficient storage unit (coming soon. Be patient). For now we lose strdup to avoid the mixed memory models. newstrdup() will throw std::invalid_argument() if handed a NULL.
	* Change all strdup()'s to newstrdup()
	* Change free() for all strdup'ed() blocks to delete []
	* alloc.cc: Something changed in exception specification. Add std::
	* alloc.cc: pthread_alloc declares memset. Include it

2000-11-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* README.BeOS: added
	* README.win32: added (temporarily unavailable) to cross-compiling instructions	
	* Makefile.be: added 'make bindist' option to automate distributing
	* actors.cc: removed an inline in BeOS. (won't compile otherwise...)

2000-11-26  Max Horn  <max@quendi.de>
	* files/utils.cc: fixed a bug in get_system_path (it sometimes "forgot" to call switch_slashes)

2000-11-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* beos/exult.rsrc: BeOS resource file
	* Makefile.be: include resource file in binary

2000-11-26  Max Horn  <max@quendi.de>
	* mouse.cc: mouse is now positioned correctly directly after creation

2000-11-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gamewin.cc: fixed problem with "journey onward" right after "create new game"

2000-11-26  Max Horn  <max@quendi.de>
	* effects.cc, gamedat.cc, gumps.cc, imagewin.h, usecode.cc, useval.cc: fixed incorrect uses of delete/delete[]
	* txtscroll.cc: TextScroller::text change to vector of std::strings
	* effects.cc: Text_effect::msg changed to std::string

2000-11-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in: fixed most (hopefully all) configure options

2000-11-25  Max Horn  <max@quendi.de>
	* Configuration.cc: some cleanup
	* exceptions.h: exult_exception now saves errno when it is thrown
	* exult.cc: moved most code of main() to exult_main()